add_library(basicFunctions SHARED "basicFunctions.cpp")
add_library(stabilizationFunctions SHARED "stabilizationFunctions.cpp")
add_library(wienerFilter SHARED "wienerFilter.cpp")
target_link_libraries(basicFunctions ${OpenCV_LIBS})
target_link_libraries(stabilizationFunctions ${OpenCV_LIBS})
target_link_libraries(wienerFilter ${OpenCV_LIBS})
#target_link_libraries(basicFunctions stabilizationFunctions wienerFilter)